ecmascript/parser/tests/typescript-errors/type-only-export-specifier/missing-as/input.ts.stderr
error: Expected ',', got 'bar'
 --> $DIR/tests/typescript-errors/type-only-export-specifier/missing-as/input.ts:1:19
  |
1 | export { type foo bar }
  |                   ^^^

